Updating Old File for core commit

--- a/help/using/docs-updates/docs-2018.md
+++ b/help/using/docs-updates/docs-2018.md
@@ -1,23 +1,22 @@
 ---
-description: Liste de documents nouveaux ou révisés publiés en 2018 et les années précédentes. Inclut des mises à jour mineures de la documentation d’Audience Manager qui pourraient ne pas figurer dans les notes de mise à jour d’Experience Cloud.
-seo-description: Liste de documents nouveaux ou révisés publiés en 2018 et les années précédentes. Inclut des mises à jour mineures de la documentation d’Audience Manager qui pourraient ne pas figurer dans les notes de mise à jour d’Experience Cloud.
+description: Liste de la documentation nouvelle ou révisée publiée en 2018 et les années précédentes. Inclut des mises à jour mineures de la documentation d’Audience Manager qui pourraient ne pas figurer dans les notes de mise à jour d’Experience Cloud.
+seo-description: Liste de la documentation nouvelle ou révisée publiée en 2018 et les années précédentes. Inclut des mises à jour mineures de la documentation d’Audience Manager qui pourraient ne pas figurer dans les notes de mise à jour d’Experience Cloud.
 seo-title: Mises à jour de la documentation 2018
 solution: Audience Manager
 title: Mises à jour de la documentation 2018
 uuid: 75592371-8e97-440a-9cdc-417498d13d6c
-feature: Overview
-translation-type: tm+mt
-source-git-commit: e05eff3cc04e4a82399752c862e2b2370286f96f
+feature: Présentation
+exl-id: a6d166e9-cad3-4201-a6dd-3d288366938c
+source-git-commit: 4d3c859cc4dc5294286680b0e63c287e0409f7fd
 workflow-type: tm+mt
-source-wordcount: '1067'
+source-wordcount: '1068'
 ht-degree: 48%
 
 ---
 
-
 # Mises à jour de la documentation 2018 {#documentation-updates}
 
-Liste de documents nouveaux ou révisés publiés en 2018 et les années précédentes. Inclut des mises à jour mineures de la documentation d’Audience Manager qui pourraient ne pas figurer dans les notes de mise à jour d’Experience Cloud.
+Liste de la documentation nouvelle ou révisée publiée en 2018 et les années précédentes. Inclut des mises à jour mineures de la documentation d’Audience Manager qui pourraient ne pas figurer dans les notes de mise à jour d’Experience Cloud.
 
 Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.com/content/help/fr-FR/release-notes/experience-cloud/current.html) pour prendre connaissance des modifications apportées à [!DNL Audience Manager] et aux autres solutions d’[!DNL Experience Cloud]. Pour consulter les anciennes notes de mise à jour, reportez-vous à la section [Années précédentes](../docs-updates/docs-2018.md).
 
@@ -37,19 +36,19 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/audience-lab/audience-lab.md">Audience Lab </a> </p> </td> 
-   <td colname="col2"> <p>Nous avons mis à jour la documentation afin d’inclure les nouvelles fonctionnalités de recherche et de filtrage pour les groupes de tests. Voir la section <a href="../features/audience-lab/audience-lab.md#search-and-filter"> Recherche et filtrage des groupes de tests</a>. </p> </td> 
+   <td colname="col2"> <p>Nous avons mis à jour la documentation afin d’inclure les nouvelles fonctionnalités de recherche et de filtrage pour les groupes de test. Voir la section <a href="../features/audience-lab/audience-lab.md#search-and-filter"> Recherche et filtrage des groupes test</a> . </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../reference/system-components/components-data-action.md"> Optimisations IRIS</a> </p> </td> 
    <td colname="col2"> <p>Voir les <b>règles de mappage des segments</b> pour obtenir plus d’informations sur l’ensemble de règles appliquées par IRIS lors de l’envoi de segments vers des destinations. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p><a href="../reporting/general-reports.md#general-reports-overview"> Améliorations apportées à la documentation des rapports généraux</a> </p> </td> 
+   <td colname="col1"> <p><a href="../reporting/general-reports.md#general-reports-overview"> Améliorations de la documentation sur les rapports généraux</a> </p> </td> 
    <td colname="col2"> <p>Dans les rapports généraux, des définitions et des exemples ont été ajoutés pour toutes les mesures. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p><a href="../features/addressable-audiences.md"> Améliorations apportées à la documentation relative aux Audiences adressables</a> </p> </td> 
-   <td colname="col2"> <p>Nous avons effectué quelques mises à jour pour clarifier la différence entre les mesures au niveau du client et celles au niveau du segment. </p> </td> 
+   <td colname="col1"> <p><a href="../features/addressable-audiences.md"> Améliorations apportées à la documentation sur les audiences adressables</a> </p> </td> 
+   <td colname="col2"> <p>Nous avons apporté quelques mises à jour afin de clarifier la différence entre les mesures au niveau du client et celles au niveau du segment. </p> </td> 
   </tr> 
  </tbody> 
 </table>
@@ -66,7 +65,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
  <tbody> 
   <tr> 
    <td colname="col1"> <p><a href="../features/manage-datasources.md#delete-data-source"> Suppression d’une source de données</a> </p> </td> 
-   <td colname="col2"> <p>Pour les clients qui utilisent l'Audience Manager et Adobe Analytics : L’interface utilisateur de l’Audience Manager ne vous permet pas de supprimer les sources de données créées automatiquement à partir de vos suites de rapports Analytics. Utilisez le service principal <a href="https://docs.adobe.com/content/help/en/core-services/interface/about-core-services/core-services-landing.html" format="https" scope="external"></a> pour annuler le mappage de ces sources de données. </p> </td> 
+   <td colname="col2"> <p>Pour les clients qui utilisent Audience Manager et Adobe Analytics : L’interface utilisateur de l’Audience Manager ne vous permet pas de supprimer les sources de données créées automatiquement de vos suites de rapports Analytics. Utilisez le <a href="https://docs.adobe.com/content/help/en/core-services/interface/about-core-services/core-services-landing.html" format="https" scope="external"> Core Service</a> pour annuler le mappage de ces sources de données. </p> </td> 
   </tr> 
  </tbody> 
 </table>
@@ -83,11 +82,11 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
  <tbody> 
   <tr> 
    <td colname="col1"> <p><a href="../dil/dil-overview.md">API Data Integration Library (DIL) </a> </p> </td> 
-   <td colname="col2"> <p>À partir de la version 8.0, <span class="wintitle"> DIL</span> a une forte dépendance sur <a href="https://docs.adobe.com/content/help/fr-FR/id-service/using/home.html" format="https" scope="external"><span class="keyword"> Service d'identité Adobe Experience Platform</span></a>, version 3.3 ou supérieure. </p> </td> 
+   <td colname="col2"> <p>À partir de la version 8.0, <span class="wintitle"> DIL</span> dépend fortement de <a href="https://docs.adobe.com/content/help/fr-FR/id-service/using/home.html" format="https" scope="external"><span class="keyword"> Adobe Experience Platform Identity Service</span></a>, version 3.3 ou supérieure. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../dil/dil-overview.md"> Présentation de Data Integration Library (DIL)</a> </p> </td> 
-   <td colname="col2"> <p>Modification de <a href="../dil/dil-overview.md"> Obtention et implémentation du code du DIL</a> pour tenir compte du fait que <span class="keyword"> Adobe Experience Platform Launch</span> est l'outil de déploiement du code préféré dans l'Experience Cloud <span class="keyword"> </span>. </p> </td> 
+   <td colname="col2"> <p>Modification de <a href="../dil/dil-overview.md"> Obtention et mise en oeuvre du code du DIL</a> afin de tenir compte du fait que <span class="keyword"> Adobe Experience Platform Launch</span> est l’outil de déploiement de code préféré dans l’Experience Cloud <span class="keyword"> </span>. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"><a href="../dil/dil-class-overview/dil-create.md#dil-create"> Création DIL</a> </td> 
@@ -100,7 +99,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/audience-lab/audience-lab.md">Audience Lab </a> </p> </td> 
-   <td colname="col2"> <p>La page d'aperçu du laboratoire d'Audiences comprend désormais un champ de recherche qui vous permet de trouver facilement n'importe quel groupe de tests. </p> </td> 
+   <td colname="col2"> <p>La page de présentation d’Audience Lab comprend désormais un champ de recherche, ce qui vous permet de trouver facilement n’importe lequel de vos groupes de test. </p> </td> 
   </tr> 
  </tbody> 
 </table>
@@ -121,11 +120,11 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/profile-merge-rules/merge-rule-unsegment.md"> Stratégies de fusion de profils et processus de suppression de la segmentation des appareils</a> </p> </td> 
-   <td colname="col2"> <p>La section Unsegmentation décrit les processus qui excluent et suppriment les profils de périphériques des segments. La possibilité de supprimer un profil de périphérique d’un segment dépend de l’option de périphérique utilisée pour créer une règle de fusion de Profil. </p> </td> 
+   <td colname="col2"> <p>La suppression de la segmentation décrit les processus qui excluent et suppriment les profils d’appareil des segments. Votre capacité à supprimer un profil d’appareil d’un segment dépend de l’option d’appareil utilisée pour créer une règle de fusion de profils. </p> </td> 
   </tr>
   <tr> 
    <td colname="col1"> <p><a href="../faq/faq-profile-merge.md"> FAQ sur les stratégies de fusion de profils et la représentation graphique des appareils</a> </p> </td> 
-   <td colname="col2"> <p>Réponses aux règles de fusion de Profils courantes et aux questions relatives aux graphiques de périphériques. </p> </td> 
+   <td colname="col2"> <p>Réponses aux questions courantes sur les règles de fusion de profils et le graphique de périphérique. </p> </td> 
   </tr> 
  </tbody> 
 </table>
@@ -142,7 +141,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
  <tbody> 
   <tr> 
    <td colname="col1"><a href="../reporting/audience-optimization-reports/aor-publishers/aor-publishers.md"> Optimisation d’audience pour les éditeurs</a> </td> 
-   <td colname="col2"> <p>Audience Optimization pour les éditeurs vous aide à identifier les opportunités de performance potentielle pour les segments Audience Manager sur votre propre contenu exploité. Ces rapports combinent des données de performances de campagne au niveau du journal avec des mesures d’Audience Manager afin d’optimiser les audiences et d’identifier les opportunités de monétisation. </p> </td> 
+   <td colname="col2"> <p>Audience Optimization pour les éditeurs vous aide à identifier les opportunités de performance potentielle pour les segments Audience Manager sur votre propre contenu exploité. Ces rapports combinent des données de performances de campagne au niveau du journal avec des mesures d’Audience Manager afin d’informer les optimisations d’audience et les opportunités de monétisation. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../reporting/audience-optimization-reports/aor-publishers/import-dfp.md"> Importation de fichiers de données DFP dans Audience Manager</a> </p> </td> 
@@ -163,27 +162,27 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
  <tbody> 
   <tr> 
    <td colname="col1"><a href="../api/dcs-intro/dcs-api-reference/dcs-api-methods.md"> Méthodes d’API DCS</a> </td> 
-   <td colname="col2"> <p>Les demandes de GET ont une longueur de contenu maximale de 8 Ko. Vous pouvez en savoir plus sur les méthodes d'API GET et POST en visitant cette page. </p> </td> 
+   <td colname="col2"> <p>Les demandes de GET ont une longueur de contenu maximale de 8 Ko. Pour en savoir plus sur les méthodes d’API de GET et de POST, consultez cette page. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../reference/tls-support.md"> Obsolescence du protocole TLS 1.0</a> </p> </td> 
    <td colname="col2"> <p>En juin 2018, Adobe supprime l’assistance pour le protocole TLS 1.0. Adobe Audience Manager ne fonctionnera pas pour vos utilisateurs finaux utilisant des navigateurs qui prennent uniquement en charge le protocole TLS 1.0. Nous avons élaboré pour vous une liste de navigateurs et de versions compatibles avec le protocole TLS. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p><a href="../overview/data-security-and-privacy/data-privacy-requests.md"> Règlement général sur la protection des données</a> </p> </td> 
-   <td colname="col2"> <p>Avant de lire les détails de l'Audience Manager, nous vous conseillons de consulter le document Experience Cloud du Règlement général européen sur la protection des données (RGPD), lié à cette page. </p> </td> 
+   <td colname="col1"> <p><a href="../overview/data-security-and-privacy/data-privacy-requests.md"> Règlement général sur la protection des données (RGPD)</a> </p> </td> 
+   <td colname="col2"> <p>Avant de lire les détails de l’Audience Manager, nous vous conseillons de consulter le document Experience Cloud du Règlement général sur la protection des données (RGPD) européen, lié à cette page. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../overview/data-security-and-privacy/data-privacy-requests.md"> RGPD dans Audience Manager</a> </p> </td> 
-   <td colname="col2"> <p>Ce document couvre les aspects techniques du Règlement général sur la protection des données (RGPD) pour l'Audience Manager et vous montre comment soumettre des demandes de RGPD à l'Audience Manager. </p> </td> 
+   <td colname="col2"> <p>Ce document couvre les aspects techniques liés au Règlement général sur la protection des données (RGPD) pour l’Audience Manager et vous indique comment soumettre des demandes RGPD à l’Audience Manager. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../overview/data-security-and-privacy/aam-gdpr-glossary.md"> FAQ relative au RGPD</a> </p> </td> 
-   <td colname="col2"> <p>Ce document contient quelques-unes des questions les plus courantes posées par nos clients et partenaires au sujet du Règlement général européen sur la protection des données (RGPD), et comment Adobe Audience Manager, en tant que processeur de données, répond aux diverses exigences du RGPD. </p> </td> 
+   <td colname="col2"> <p>Ce document contient certaines des questions les plus courantes posées par nos clients et partenaires concernant le Règlement général européen sur la protection des données (RGPD) et la manière dont Adobe Audience Manager, en tant qu’entité de traitement des données, répond à diverses exigences du RGPD. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../overview/data-security-and-privacy/aam-gdpr-partners.md"> Partenaire RGPD non segmenté</a> </p> </td> 
-   <td colname="col2"> <p>Afin d'aider nos clients à automatiser les demandes de RMMD, l'Audience Manager informe nos partenaires d'activation des demandes de suppression des objets de données en leur envoyant des informations de non-segmentation (ou de suppression de segment). </p> </td> 
+   <td colname="col2"> <p>Afin d’aider nos clients à automatiser les demandes en vertu du RGPD, l’Audience Manager informe nos partenaires d’activation des demandes de suppression des titulaires de données en leur envoyant des informations de suppression de la segmentation (ou du segment). </p> </td> 
   </tr> 
  </tbody> 
 </table>
@@ -203,12 +202,12 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
    <td colname="col2"> <p>À compter du 29 mars 2018, tous les clients Audience Manager qui sont sur <a href="https://www.ampproject.org/learn/overview/" format="https" scope="external">Accelerated Mobile Pages</a> (AMP) devront utiliser l’intégration côté serveur lors de l’envoi d’audiences à DoubleClick for Publishers (DFP) de Google. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p><a href="../features/traits/trait-and-segment-qualification-reference.md#unique-trait-realizations"> Valorisation des caractéristiques uniques et population totale des caractéristiques</a> </p> </td> 
+   <td colname="col1"> <p><a href="../features/traits/trait-and-segment-qualification-reference.md#unique-trait-realizations"> Réalisations de caractéristiques uniques et population totale de caractéristiques</a> </p> </td> 
    <td colname="col2"> <p>Ajout d’une nouvelle section à la Référence de qualification des traits, décrivant les différences entre les Réalisations de traits uniques et la Population totale des traits. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../api/dcs-intro/dcs-api-reference/dcs-keys.md"> Attributs pris en charge pour les appels de l’API DCS</a> </p> </td> 
-   <td colname="col2"> <p>Avec les paramètres d_tdpid et d_tdpid_ic, vous pouvez transmettre une source de données pour l’évaluation des caractéristiques. Seules les caractéristiques de cette source de données seront évaluées. </p> </td> 
+   <td colname="col2"> <p>Avec les paramètres d_tdpid et d_tdpid_ic , vous pouvez transmettre une source de données pour l’évaluation des caractéristiques. Seules les caractéristiques de cette source de données seront évaluées. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../integration/receiving-audience-data/batch-outbound-transfers/authorize-s3-cross-bucket.md"> Utiliser les autorisations de compartiments inter-comptes Amazon S3 pour les fichiers de sortie</a> </p> </td> 
@@ -233,7 +232,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../faq/faq-reporting.md"> FAQ sur la création de rapports</a> </p> </td> 
-   <td colname="col2"> <p>Il arrive que les chiffres de l'évaluation des caractéristiques uniques soient supérieurs à ceux de l'ensemble de la population de caractéristiques. Nous expliquons pourquoi dans la FAQ. </p> </td> 
+   <td colname="col2"> <p>Parfois, les chiffres Réalisations de caractéristiques uniques peuvent être supérieurs à la population totale de caractéristiques. Nous expliquons pourquoi dans la FAQ. </p> </td> 
   </tr> 
  </tbody> 
 </table>
@@ -250,11 +249,11 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
  <tbody> 
   <tr> 
    <td colname="col1"> <p><a href="../api/dcs-intro/dcs-api-reference/dcs-error-codes.md"> Codes, messages et exemples d’erreur des serveurs de collecte de données</a> </p> </td> 
-   <td colname="col2"> <p>Erreur Ajoutée 198 : Les demandes de ce pays sont bloquées par le partenaire </p> </td> 
+   <td colname="col2"> <p>Ajout de l’erreur 198 : Les demandes de ce pays sont bloquées par le partenaire </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/traits/trait-and-segment-qualification-reference.md"> Référence de qualification des traits</a> </p> </td> 
-   <td colname="col2"> <p>Vos utilisateurs débuts la qualification pour une caractéristique basée sur des règles environ 4 heures après avoir <a href="../features/traits/create-onboarded-rule-based-traits.md#create-rules-based-or-onboarded-traits"> créé la caractéristique</a> dans l’interface utilisateur. Lisez le document pour en savoir plus sur la qualification des caractéristiques. </p> </td> 
+   <td colname="col2"> <p>Vos utilisateurs commenceront à se qualifier pour une caractéristique basée sur des règles environ 4 heures après avoir <a href="../features/traits/create-onboarded-rule-based-traits.md#create-rules-based-or-onboarded-traits"> créé la caractéristique</a> dans l’interface utilisateur. Lisez le document pour plus d’informations sur la qualification des caractéristiques. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/administration/usage-limits.md"> Limites d’utilisation</a> </p> </td> 
@@ -262,4 +261,3 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
   </tr> 
  </tbody> 
 </table>
-
