--- a/help/using/docs-updates/docs-2016.md
+++ b/help/using/docs-updates/docs-2016.md
@@ -1,23 +1,22 @@
 ---
-description: Liste de documentation sur les Audiences Manager nouvelles et révisées publiée en 2016. Comprend des mises à jour ou des modifications mineures du guide d’Audience Manager qui peuvent ne pas être incluses dans les notes de mise à jour de l’Experience Cloud.
-seo-description: Liste de documentation sur les Audiences Manager nouvelles et révisées publiée en 2016. Comprend des mises à jour ou des modifications mineures du guide d’Audience Manager qui peuvent ne pas être incluses dans les notes de mise à jour de l’Experience Cloud.
+description: Liste de la documentation sur les Audiences Manager nouvelles et révisées publiée en 2016. Inclut des mises à jour mineures ou des modifications au guide d’Audience Manager qui peuvent ne pas être incluses dans les notes de mise à jour de l’Experience Cloud.
+seo-description: Liste de la documentation sur les Audiences Manager nouvelles et révisées publiée en 2016. Inclut des mises à jour mineures ou des modifications au guide d’Audience Manager qui peuvent ne pas être incluses dans les notes de mise à jour de l’Experience Cloud.
 seo-title: Mises à jour de la documentation 2016
 solution: Audience Manager
 title: Mises à jour de la documentation 2016
 uuid: 940846e2-25aa-4136-8342-6341707f5197
-feature: Overview
-translation-type: tm+mt
-source-git-commit: e05eff3cc04e4a82399752c862e2b2370286f96f
+feature: Présentation
+exl-id: f344dfdb-75c5-4931-81ca-f6de25e26929
+source-git-commit: 4d3c859cc4dc5294286680b0e63c287e0409f7fd
 workflow-type: tm+mt
-source-wordcount: '1414'
+source-wordcount: '1415'
 ht-degree: 26%
 
 ---
 
-
 # Mises à jour de la documentation 2016 {#documentation-updates}
 
-Liste de documentation sur les Audiences Manager nouvelles et révisées publiée en 2016. Comprend des mises à jour ou des modifications mineures du guide d’Audience Manager qui peuvent ne pas être incluses dans les notes de mise à jour de l’Experience Cloud.
+Liste de la documentation sur les Audiences Manager nouvelles et révisées publiée en 2016. Inclut des mises à jour mineures ou des modifications au guide d’Audience Manager qui peuvent ne pas être incluses dans les notes de mise à jour de l’Experience Cloud.
 
 ## Décembre 2016 {#dec-16}
 
@@ -30,24 +29,24 @@ Liste de documentation sur les Audiences Manager nouvelles et révisées publié
  </thead>
  <tbody> 
   <tr> 
-   <td colname="col1"> <a href="../features/algorithmic-models/understanding-models.md#understanding-traitweight"> Comprendre TraitWeight</a> </td> 
-   <td colname="col2"> Documentation d’une étape supplémentaire dans le processus de découverte algorithmique. Cette étape explique l’évolution des caractéristiques algorithmiques sur plusieurs cycles de traitement de données. </td> 
+   <td colname="col1"> <a href="../features/algorithmic-models/understanding-models.md#understanding-traitweight"> Présentation de TraitWeight</a> </td> 
+   <td colname="col2"> Documentation d’une étape supplémentaire dans le processus de découverte algorithmique. Cette étape explique l’évolution des caractéristiques algorithmiques sur plusieurs cycles de traitement des données. </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../reporting/report-sampling.md"> Échantillonnage de données et taux d’erreur dans les rapports Audience Manager sélectionnés... </a> </p> </td> 
-   <td colname="col2"> <p>Révision afin d'inclure de nouvelles informations, de clarifier et de mettre en forme les choses. </p> </td> 
+   <td colname="col2"> <p>Révision afin d’inclure de nouvelles informations et de clarifier et de style. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../dil/dil-use-cases.md#traffic-dil-gtm"> DIL de trafic dans Google Tag Manager (GTM)  </a> </p> </td> 
-   <td colname="col2"> <p>Après une mise à jour de Google en mai 2016, vous pouvez charger du code de DIL dans la section HTML personnalisée d’une balise . Il n’est plus nécessaire d’héberger le code à distance. </p> </td> 
+   <td colname="col2"> <p>Après une mise à jour de Google en mai 2016, vous pouvez charger le code du DIL dans la section HTML personnalisée d’une balise. Vous n’avez plus besoin d’héberger le code à distance. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../faq/faq-data-collection.md"> FAQ sur la collecte de données et l’intégration de produit </a> </p> </td> 
-   <td colname="col2"> <p>Inclut une nouvelle entrée sur la liste blanche <span class="keyword"> Audience Manager</span> adresses IP et FTP. </p> </td> 
+   <td colname="col2"> <p>Inclut une nouvelle entrée sur les <span class="keyword"> Audience Manager </span> adresses IP et FTP. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../faq/faq-privacy.md"> FAQ sur la rétention des données et la confidentialité </a> </p> </td> 
-   <td colname="col2"> <p>Mise à jour et révision du document d’origine afin d’inclure le contenu de confidentialité. </p> </td> 
+   <td colname="col2"> <p>Mise à jour et révision du document d’origine afin d’inclure le contenu relatif à la confidentialité. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../reporting/dynamic-reports/overlap-csv-files.md"> Fichiers CSV pour les rapports de chevauchement </a> </p> </td> 
@@ -55,7 +54,7 @@ Liste de documentation sur les Audiences Manager nouvelles et révisées publié
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../dil/dil-modules.md#ga-submit-universal-analytics"> GA.submitUniversalAnalytics </a> </p> </td> 
-   <td colname="col2"> <p>Documentation décrivant une nouvelle méthode de DIL qui vous permet d’envoyer des données à <span class="keyword"> Audience Manager</span> à partir d’Universal Analytics de Google. </p> </td> 
+   <td colname="col2"> <p>Documentation qui décrit une nouvelle méthode de DIL qui vous permet d’envoyer des données à <span class="keyword"> Audience Manager</span> à partir d’Universal Analytics de Google. </p> </td> 
   </tr> 
  </tbody> 
 </table>
@@ -72,31 +71,31 @@ Liste de documentation sur les Audiences Manager nouvelles et révisées publié
  <tbody> 
   <tr> 
    <td colname="col1"> <a href="../reference/visitor-authentication-states.md"> États d’authentification du visiteur dans Audience Manager </a> </td> 
-   <td colname="col2"> <span class="keyword"> Audience </span> Manager gère les états d’authentification de l’ID de visiteur  <code> UNKNOWN</code> et  <code> LOGGED_OUT</code> de la même manière. Le document fournit plus d'informations sur la façon dont nous gérons les appels de événement <code> setCustomerID</code>. </td> 
+   <td colname="col2"> <span class="keyword"> Audience </span> Manager gère les états d’authentification de l’identifiant visiteur  <code> UNKNOWN</code> et  <code> LOGGED_OUT</code> de la même manière. Le document fournit des informations supplémentaires sur la façon dont nous gérons les appels d’événement <code> setCustomerID</code>. </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <a href="../reference/cid.md"> CID remplace DPID et DPUUID </a> </td> 
-   <td colname="col2"> Vous pouvez désormais utiliser les codes d’intégration d’ID de client pour les sources de données d’identifiant de mobile. Utilisez DSID_20914 CID_IC pour les périphériques Android et DSID_20915 CID_IC pour les périphériques iOS. </td> 
+   <td colname="col2"> Vous pouvez désormais utiliser des codes d’intégration d’ID de client pour les sources de données d’identifiant mobile. Utilisez DSID_20914 CID_IC pour les appareils Android et DSID_20915 CID_IC pour les appareils iOS. </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../reference/ids-in-aam.md"> Index des identifiants dans Audience Manager </a> </p> </td> 
-   <td colname="col2"> <p>Consultez ce document pour obtenir une liste complète des <span class="keyword"> identifiants d'Audience Manager</span>. </p> </td> 
+   <td colname="col2"> <p>Consultez ce document pour obtenir la liste complète des <span class="keyword"> identifiants d’Audience Manager</span>. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../faq/faq-audience-lab.md"> FAQ sur Audience Lab </a> </p> </td> 
    <td colname="col2"> <p>Questions fréquentes sur la fonction <span class="wintitle"> Audience Lab</span>. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p> <a href="../features/addressable-audiences.md#date-ranges"> Plages de dates dans les Audiences et destinations adressables  </a> </p> </td> 
-   <td colname="col2"> <p>Nouveau contenu qui décrit le fonctionnement des intervalles de temps pour les <span class="wintitle"> Audiences adressables</span> et les <span class="wintitle"> Destinations</span>. </p> </td> 
+   <td colname="col1"> <p> <a href="../features/addressable-audiences.md#date-ranges"> Périodes dans les audiences et destinations adressables  </a> </p> </td> 
+   <td colname="col2"> <p>Nouveau contenu qui décrit le fonctionnement des intervalles de temps pour les <span class="wintitle"> audiences adressables</span> et les <span class="wintitle"> destinations</span>. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p> <a href="../features/addressable-audiences.md#addressable-audience-metrics"> Mesures d'Audience adressables  </a> </p> </td> 
-   <td colname="col2"> <p>Description mise à jour des nouvelles mesures de rapport et des mesures de rapport révisées. </p> </td> 
+   <td colname="col1"> <p> <a href="../features/addressable-audiences.md#addressable-audience-metrics"> Mesures d’audience adressables  </a> </p> </td> 
+   <td colname="col2"> <p>Mise à jour des descriptions pour les nouvelles mesures de rapport et révision. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../features/destinations/destinations-home.md"> Page d’accueil des destinations </a> </p> </td> 
-   <td colname="col2"> <p>Nouveau contenu décrivant les fonctionnalités du landing page <span class="wintitle"> Destinations</span>. </p> </td> 
+   <td colname="col2"> <p>Nouveau contenu qui décrit les fonctionnalités sur la page d’entrée <span class="wintitle"> Destinations</span> . </p> </td> 
   </tr> 
  </tbody> 
 </table>
@@ -113,15 +112,15 @@ Liste de documentation sur les Audiences Manager nouvelles et révisées publié
  <tbody> 
   <tr> 
    <td colname="col1"> <a href="../integration/receiving-audience-data/real-time-outbound-transfers/oauth-in-outbound-transfers.md"> Intégration OAuth 2.0 pour les transferts sortants en temps réel </a> </td> 
-   <td colname="col2">Ajouté la capacité de sécuriser votre transfert de données sortant en temps réel via le protocole OAuth 2.0. Contactez votre <span class="keyword"> consultant Adobe Audience Manager</span> pour commencer. </td> 
+   <td colname="col2">Ajout de la capacité de sécuriser votre transfert de données sortantes en temps réel via le protocole OAuth 2.0. Contactez votre <span class="keyword"> consultant Adobe Audience Manager</span> pour commencer. </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../features/algorithmic-models/understanding-models.md"> Modèles algorithmiques </a> </p> </td> 
-   <td colname="col2"> <p>Modification du titre en Modèles algorithmiques à partir de Modèles. </p> </td> 
+   <td colname="col2"> <p>Modification du titre des modèles algorithmiques à partir des modèles. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../features/audience-marketplace/marketplace-data-buyers/marketplace-manage-subscriptions.md">Que se passe-t-il une fois qu’un fournisseur désactive mon flux de données ?</a> </p> </td> 
-   <td colname="col2"> <p>Correction de noms d’en-tête incorrects fournis dans la pièce jointe du courrier électronique de désactivation. </p> </td> 
+   <td colname="col2"> <p>Correction de noms d’en-tête incorrects fournis dans la pièce jointe de l’email de désactivation. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../features/declared-ids.md#declared-id-variables"> Variables d’ID déclarées  </a> </p> </td> 
@@ -129,7 +128,7 @@ Liste de documentation sur les Audiences Manager nouvelles et révisées publié
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../reporting/audience-optimization-reports/aor-advertisers/import-dcm.md"> Importation de fichiers de données DCM dans Audience Manager </a> </p> </td> 
-   <td colname="col2"> <p>Remarque Ajoutée pour rappeler aux clients de vérifier le format de leur fichier auprès de leur gestionnaire de compte DCM. </p> </td> 
+   <td colname="col2"> <p>Ajout d’une remarque pour rappeler aux clients de vérifier le format de leur fichier avec leur gestionnaire de compte DCM. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../dil/dil-modules.md#ga-init"> GA.init </a> </p> </td> 
@@ -137,16 +136,16 @@ Liste de documentation sur les Audiences Manager nouvelles et révisées publié
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../reference/amazon-s3.md"> À propos d’Amazon S3 </a> </p> </td> 
-   <td colname="col2"> <p>Chiffrement Ajouté au repos pour les transferts de données sortants par lots. </p> </td> 
+   <td colname="col2"> <p>Ajout d’un chiffrement au repos pour les transferts de données sortantes par lots. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../features/profile-merge-rules/merge-rule-definitions.md"> Définition des options des stratégies de fusion de profils </a> </p> </td> 
-   <td colname="col2"> <p>Révision afin d’inclure plus d’informations sur la <span class="keyword"> Adobe Experience Cloud Device Co-op</span>. </p> </td> 
+   <td colname="col2"> <p>Révision afin d’inclure plus d’informations sur <span class="keyword"> Adobe Experience Cloud Device Co-op</span>. </p> </td> 
   </tr> 
  </tbody> 
 </table>
 
-## septembre 2016 {#sept-16}
+## Septembre 2016 {#sept-16}
 
 <table id="table_9B18916DD43E4DB38C0C340DE4E3DF62"> 
  <thead> 
@@ -158,31 +157,31 @@ Liste de documentation sur les Audiences Manager nouvelles et révisées publié
  <tbody> 
   <tr> 
    <td colname="col1"> <a href="../faq/faq-privacy.md"> FAQ sur la confidentialité </a> </td> 
-   <td colname="col2"> Modification de la valeur de durée de vie (TTL) du cookie demdex et du cookie partenaire à 180 jours pour se conformer aux réglementations CNIL françaises. </td> 
+   <td colname="col2"> Modification de la valeur TTL (time-to-live) du cookie demdex et du cookie partenaire à 180 jours pour se conformer aux réglementations CNIL françaises. </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <a href="https://docs.adobe.com/content/help/fr-FR/core-services/interface/ec-cookies/cookies-am.html" format="https" scope="external"> Cookies utilisés dans l’Experience Cloud</a> </td> 
-   <td colname="col2"> Modification de la valeur de durée de vie (TTL) du cookie demdex et du cookie partenaire à 180 jours pour se conformer aux réglementations CNIL françaises. </td> 
+   <td colname="col2"> Modification de la valeur TTL (time-to-live) du cookie demdex et du cookie partenaire à 180 jours pour se conformer aux réglementations CNIL françaises. </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <a href="../dil/dil-overview.md"> Présentation de Data Integration Library (DIL) </a> </td> 
-   <td colname="col2">Présentation générale de la <span class="wintitle"> Bibliothèque d'informations sur les données</span> (DIL). </td> 
+   <td colname="col2">Présentation générale de la <span class="wintitle"> Bibliothèque d’informations sur les données</span> (DIL). </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <a href="../integration/sending-audience-data/batch-data-transfer-explained/inbound-file-contents.md"> Contenu du fichier de données entrant : syntaxe, caractères non valides, variables et exemples </a> </td> 
-   <td colname="col2"> Mise à jour de la liste de caractères non valides dans les ID de caractéristiques pour les fichiers de données entrants. </td> 
+   <td colname="col2"> Mise à jour de la liste des caractères non valides dans les identifiants de caractéristique pour les fichiers de données entrants. </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../features/addressable-audiences.md"> Audiences adressables </a> </p> </td> 
-   <td colname="col2"> <p>Révisions mineures et réorganisation du contenu. </p> </td> 
+   <td colname="col2"> <p>Révisions mineures et contenu réorganisé. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../reference/aam-time-zones.md"> Fuseaux horaires dans Audience Manager </a> </p> </td> 
-   <td colname="col2"> <p> L’Audience Manager utilise l’heure universelle coordonnée (UTC) dans toute son interface utilisateur. </p> </td> 
+   <td colname="col2"> <p> Audience Manager utilise le temps universel coordonné (UTC) sur l’ensemble de son interface utilisateur. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p> <a href="../api/api-swagger-migration.md"> Migration du code d’API  </a> </p> </td> 
-   <td colname="col2"> <p>Liens Ajoutés vers les API de groupe de tests de segment et l’API de requête de flux de données. </p> </td> 
+   <td colname="col1"> <p> <a href="../api/api-swagger-migration.md"> Migration du code de l’API  </a> </p> </td> 
+   <td colname="col2"> <p>Ajout de liens vers les API de groupe de test de segment et l’API de demande de flux de données. </p> </td> 
   </tr> 
  </tbody> 
 </table>
@@ -199,11 +198,11 @@ Liste de documentation sur les Audiences Manager nouvelles et révisées publié
  <tbody> 
   <tr> 
    <td colname="col1"> <p> <a href="../features/audience-lab/audience-lab.md">Audience Lab </a> </p> </td> 
-   <td colname="col2"> <p>Créez des segments de test mutuellement exclusifs dans les groupes de tests de segments afin de comparer et de mesurer l’efficacité de différentes destinations. </p> </td> 
+   <td colname="col2"> <p>Créez des segments de test mutuellement exclusifs dans des groupes de test de segment pour comparer et mesurer l’efficacité de différentes destinations. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../api/dcs-intro/dcs-api-reference/dcs-error-codes.md"> Codes, messages et exemples d’erreur des serveurs de collecte de données </a> </p> </td> 
-   <td colname="col2"> <p>Ajouté de nouveaux codes d’erreur orientés vers le client à l’index. </p> </td> 
+   <td colname="col2"> <p>Ajout de nouveaux codes d’erreur relatifs aux clients à l’index. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <a href="../integration/receiving-audience-data/real-time-outbound-transfers/digitally-signed-http-requests.md"> Requêtes HTTP signées numériquement </a> </td> 
@@ -211,23 +210,23 @@ Liste de documentation sur les Audiences Manager nouvelles et révisées publié
   </tr> 
   <tr> 
    <td colname="col1"> <a href="../features/traits/trait-device-targeting.md"> Ciblage des périphériques à l’aide de clés au niveau des plateformes </a> </td> 
-   <td colname="col2"> <p>Ajouté une liste téléchargeable des clés de périphérique les plus courantes, selon les mesures de Device Atlas. </p> </td> 
+   <td colname="col2"> <p>Ajout d’une liste téléchargeable des clés d’appareil les plus courantes, selon les mesures de Device Atlas. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <a href="../api/dcs-intro/dcs-api-reference/dcs-error-codes.md"> Codes, messages et exemples d’erreur des serveurs de collecte de données </a> </td> 
-   <td colname="col2"> <p>Ajouté de nouveaux codes d’erreur orientés vers le client à l’index. </p> </td> 
+   <td colname="col2"> <p>Ajout de nouveaux codes d’erreur relatifs aux clients à l’index. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../dil/dil-instance-methods.md#securedatacollection"> secureDataCollection  </a> </p> </td> 
-   <td colname="col2"> <p>Contrôlez comment le DIL effectue des appels de collecte de données avec HTTP ou HTTPS. </p> </td> 
+   <td colname="col2"> <p>Contrôlez la manière dont DIL effectue des appels de collecte de données avec HTTP ou HTTPS. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../faq/faq-api.md"> FAQ sur l’API </a> </p> </td> 
-   <td colname="col2"> <p>Mise à jour du contenu expliquant pourquoi le DIL utilise les méthodes <code> GET</code> et <code> POST</code> pour envoyer des données dans un appel de événement. </p> </td> 
+   <td colname="col2"> <p>Mise à jour du contenu expliquant pourquoi DIL utilise les méthodes <code> GET</code> et <code> POST</code> pour envoyer des données dans un appel d’événement. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../integration/receiving-audience-data/real-time-outbound-transfers/real-time-outbound-transfers.md"> Transferts de données sortantes en temps réel </a> </p> </td> 
-   <td colname="col2"> <p>Mise à jour avec des exigences et des informations supplémentaires. </p> </td> 
+   <td colname="col2"> <p>Mise à jour avec des exigences et informations supplémentaires. </p> </td> 
   </tr> 
  </tbody> 
 </table>
@@ -243,7 +242,7 @@ Liste de documentation sur les Audiences Manager nouvelles et révisées publié
  </thead>
  <tbody> 
   <tr> 
-   <td colname="col1"> <p> <a href="../reporting/onboarding-status-report.md#onboarding-status-about"> Rapport d'état de l'intégration : A propos  </a> </p> </td> 
+   <td colname="col1"> <p> <a href="../reporting/onboarding-status-report.md#onboarding-status-about"> Rapport d’état de l’intégration : A propos  </a> </p> </td> 
    <td colname="col2"> <p>Documentation révisée pour la reconception de l’interface utilisateur. </p> </td> 
   </tr> 
   <tr> 
@@ -252,11 +251,11 @@ Liste de documentation sur les Audiences Manager nouvelles et révisées publié
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../reporting/audience-optimization-reports/audience-optimization-reports.md"> Rapports d’Audience Optimization</a> </p> </td> 
-   <td colname="col2"> <p>Mise à jour des rapports <span class="wintitle"> Audience Optimization</span>avec les rapports Conversion entre Canaux, Contrôle d'accès basé sur les rôles, Groupes de conversion et Caractéristiques de conversion reportées. </p> </td> 
+   <td colname="col2"> <p>Mise à jour des rapports <span class="wintitle"> Audience Optimization</span>avec conversion cross-canal, contrôle d’accès en fonction du rôle, groupes de conversion et caractéristiques de conversion consignées. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../reporting/audience-optimization-reports/aor-advertisers/cross-channel-conversion-reporting.md"> Conversion inter-canaux </a> </p> </td> 
-   <td colname="col2"> <p>L'option <span class="wintitle"> Conversion entre Canaux</span> des rapports <span class="wintitle"> Audience Optimization</span> vous permet d'attribuer des conversions hors ligne aux impressions ou clics en ligne diffusés. </p> </td> 
+   <td colname="col2"> <p>L’option <span class="wintitle"> Cross Channel Conversion</span> des rapports <span class="wintitle"> Audience Optimization</span> vous permet d’attribuer des conversions hors ligne aux impressions ou clics en ligne diffusés. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../reporting/audience-optimization-reports/aor-advertisers/reported-conversion-traits.md"> Caractéristiques de conversion rapportées </a> </p> </td> 
@@ -268,7 +267,7 @@ Liste de documentation sur les Audiences Manager nouvelles et révisées publié
   </tr> 
   <tr> 
    <td colname="col1"> <a href="../features/traits/trait-device-targeting.md"> Ciblage des périphériques à l’aide de clés au niveau des plateformes </a> </td> 
-   <td colname="col2"> <p>Un nouveau document qui décrit les paires clé-valeur communes au niveau de la plate-forme que vous pouvez utiliser pour les utilisateurs de cible avec des variables liées au périphérique sur toutes les propriétés de votre compte d’Audience Manager. </p> </td> 
+   <td colname="col2"> <p>Un nouveau document qui décrit les paires clé-valeur courantes au niveau de la plateforme que vous pouvez utiliser pour cibler les utilisateurs avec des variables liées à l’appareil dans toutes les propriétés de votre compte d’Audience Manager. </p> </td> 
   </tr> 
  </tbody> 
 </table>
@@ -285,15 +284,15 @@ Liste de documentation sur les Audiences Manager nouvelles et révisées publié
  <tbody> 
   <tr> 
    <td colname="col1"> <p> Transfert côté serveur </p> </td> 
-   <td colname="col2"> <p>Retrait de la documentation <span class="keyword"> Audience Manager</span> en septembre 2017. Déplacé vers la documentation <span class="keyword"> Analytics</span>. </p> </td> 
+   <td colname="col2"> <p>Suppression de la documentation <span class="keyword"> Audience Manager</span> de septembre 2017. Déplacement vers la documentation <span class="keyword"> Analytics</span>. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../integration/media-data-integration/impression-data-pixels.md"> Capture des données d’impression de campagne via des appels de pixel </a> </p> </td> 
-   <td colname="col2"> <p>Mise à jour afin d’inclure le transfert d’ID de mobile avec <code> d_cid</code>. </p> </td> 
+   <td colname="col2"> <p>Mise à jour afin d’inclure la transmission des ID mobiles avec <code> d_cid</code>. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../reference/beta-environment.md"> Environnement bêta </a> </p> </td> 
-   <td colname="col2"> <p>Mise à jour des noms d’hôte DCS, UI et API. </p> </td> 
+   <td colname="col2"> <p>Mise à jour des noms d’hôte du serveur de collecte de données, de l’interface utilisateur et de l’API. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../api/rest-api-main/aam-api-getting-started.md#api-urls"> URL des API </a> </p> </td> 
@@ -313,12 +312,12 @@ Liste de documentation sur les Audiences Manager nouvelles et révisées publié
  </thead>
  <tbody> 
   <tr> 
-   <td colname="col1"> <p> Versions des ID de Visiteur Experience Cloud </p> </td> 
-   <td colname="col2"> <p>Texte révisé pour les ID 1 et 2. </p> </td> 
+   <td colname="col1"> <p> Versions d’identifiant visiteur Experience Cloud </p> </td> 
+   <td colname="col2"> <p>Modification du texte des ID 1 et 2. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../features/profile-merge-rules/merge-rules-dashboard.md"> Tableau de bord des stratégies de fusion de profils </a> </p> </td> 
-   <td colname="col2"> <p>Révision afin d’afficher les nouvelles cartes de règle de fusion sur le tableau de bord. </p> </td> 
+   <td colname="col2"> <p>Révision afin d’afficher les nouvelles cartes de règles de fusion sur le tableau de bord. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../features/profile-merge-rules/merge-rule-definitions.md"> Définition des options des stratégies de fusion de profils </a> </p> </td> 
@@ -326,15 +325,15 @@ Liste de documentation sur les Audiences Manager nouvelles et révisées publié
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../features/profile-merge-rules/profile-link-metrics.md"> Mesures des rapports des stratégies de fusion de profils </a> </p> </td> 
-   <td colname="col2"> <p>La nouvelle documentation définit les mesures des rapports et les graphiques pour la fusion des Profils. </p> </td> 
+   <td colname="col2"> <p>La nouvelle documentation définit les mesures des rapports et les graphiques pour la fusion de profils. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p> <a href="https://docs.adobe.com/content/help/en/audience-manager/user-guide/implementation-integration-guides/integration-experience-platform/aam-aep-audience-sharing.html" format="https" scope="external"> Segments d’Audience Manager dans Analytics</a> </p> </td> 
+   <td colname="col1"> <p> <a href="https://docs.adobe.com/content/help/en/audience-manager/user-guide/implementation-integration-guides/integration-experience-platform/aam-aep-audience-sharing.html" format="https" scope="external"> Audience Manager de segments dans Analytics</a> </p> </td> 
    <td colname="col2"> <p>Partagez des segments d’Audience Manager avec Analytics en temps réel. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../features/destinations/destinations.md">Destinations </a> </p> </td> 
-   <td colname="col2"> <p>Les révisions apportent des modifications importantes au contenu et à l'organisation des documents de destination. Ces modifications visent à réduire la complexité et à rendre les workflows de destination des cookies et des URL plus clairs. </p> </td> 
+   <td colname="col2"> <p>Les révisions apportent des modifications importantes au contenu et à l’organisation des documents de destination. Ces modifications sont conçues pour réduire la complexité et rendre les workflows de destination des cookies et des URL plus clairs. </p> </td> 
   </tr> 
  </tbody> 
 </table>
@@ -351,7 +350,7 @@ Liste de documentation sur les Audiences Manager nouvelles et révisées publié
  <tbody> 
   <tr> 
    <td colname="col1"> <p> <a href="../features/traits/trait-comparison-operators.md"> Utilisation d’opérateurs de comparaison dans TraitBuilder  </a> </p> </td> 
-   <td colname="col2"> <p>Ajouté un nouvel opérateur nommé <code> Matcheswords</code>. Vous permet de spécifier des modèles de mots correspondants sans utiliser d’expression régulière. </p> </td> 
+   <td colname="col2"> <p>Ajout d’un nouvel opérateur nommé, <code> Matcheswords</code>. Vous pouvez ainsi spécifier des modèles de mots correspondants sans utiliser d’expression régulière. </p> </td> 
   </tr> 
  </tbody> 
 </table>
@@ -368,7 +367,7 @@ Liste de documentation sur les Audiences Manager nouvelles et révisées publié
  <tbody> 
   <tr> 
    <td colname="col1"> <p> <a href="../features/audience-marketplace/marketplace-data-providers/marketplace-create-manage-feeds.md#deactivate-data-feed"> Désactivation du flux de données d’un abonné </a> </p> </td> 
-   <td colname="col2"> <p>Décrit comment <span class="wintitle"> Audience Marketplace</span> les fournisseurs de données désactivent le flux d’un abonné. </p> </td> 
+   <td colname="col2"> <p>Décrit la manière dont les fournisseurs de données <span class="wintitle"> Audience Marketplace</span> désactivent le flux d’un abonné. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../features/audience-marketplace/marketplace-data-buyers/marketplace-manage-subscriptions.md">Que se passe-t-il une fois qu’un fournisseur désactive mon flux de données ?</a> </p> </td> 
@@ -376,15 +375,15 @@ Liste de documentation sur les Audiences Manager nouvelles et révisées publié
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../api/dcs-intro/dcs-api-reference/dcs-error-codes.md"> Codes, messages et exemples d’erreur des serveurs de collecte de données </a> </p> </td> 
-   <td colname="col2"> <p>Erreur Ajoutée 172 pour les cookies bloqués. </p> </td> 
+   <td colname="col2"> <p>Ajout de l’erreur 172 pour les cookies bloqués. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../integration/sending-audience-data/batch-data-transfer-explained/id-sync-file-based.md"> Exigences en matière de nom et de contenu pour les fichiers de synchronisation d’identifiants </a> </p> </td> 
-   <td colname="col2"> <p>Révision du contenu pour en améliorer la clarté. Nouvelle section expliquant comment les noms de fichier et les identifiants de contenu de fichier se mappent entre eux. </p> </td> 
+   <td colname="col2"> <p>Révision du contenu afin d’en améliorer la clarté. Nouvelle section sur la façon dont les noms de fichier et les identifiants de contenu de fichier se mappent les uns aux autres. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../integration/sending-audience-data/batch-data-transfer-explained/inbound-s3-filenames.md"> Exigences en matière de nom Amazon S3 pour les fichiers de données entrants </a> </p> </td> 
-   <td colname="col2" morerows="1"> <p>Modification du contenu afin d’inclure la syntaxe des codes Android et iOS dans les noms de fichier. </p> </td> 
+   <td colname="col2" morerows="1"> <p>Révision du contenu afin d’inclure la syntaxe des codes Android et iOS dans les noms de fichier. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../integration/sending-audience-data/batch-data-transfer-explained/inbound-ftp-filenames.md"> Exigences en matière de nom FTP pour les fichiers de données entrants </a> </p> </td> 
@@ -404,38 +403,38 @@ Liste de documentation sur les Audiences Manager nouvelles et révisées publié
  <tbody> 
   <tr> 
    <td colname="col1"> <p> <a href="../api/rest-api-main/aam-api-getting-started.md#oauth"> Authentification OAuth  </a> </p> </td> 
-   <td colname="col2"> <p>Lien Ajouté pour l’authentification autorisée et implicite. </p> </td> 
+   <td colname="col2"> <p>Ajout d’un lien pour l’authentification autorisée et implicite. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../integration/integrating-third-party/rlsa-integration.md"> Envoi de segments vers une liste de remarketing Google AdWords </a> </p> </td> 
-   <td colname="col2"> <p>Instructions sur l’envoi de données de segment à une liste de marketing de relance Google AdWords. </p> </td> 
+   <td colname="col2"> <p>Instructions sur l’envoi de données de segment à une liste de remarketing Google AdWords. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../features/visitor-profile-viewer.md"> Visionneuse de profil du visiteur </a> </p> </td> 
-   <td colname="col2"> <p>Ajouté une note indiquant que l’accès à cette fonctionnalité nécessite des autorisations d’administrateur. </p> </td> 
+   <td colname="col2"> <p>Ajout d’une note indiquant que l’accès à cette fonctionnalité nécessite des autorisations d’administrateur. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../dil/dil-class-overview/dil-create.md#dil-create"> Création DIL </a> </p> </td> 
-   <td colname="col2"> <p>Texte révisé pour <code> declaredId</code>. Les ID de client doivent être transmis en tant que valeurs non codées uniquement. Le codage des ID crée des identifiants codés deux fois. </p> </td> 
+   <td colname="col2"> <p>Révision du texte pour <code> declaredId</code>. Les ID de client doivent être transmis en tant que valeurs non codées uniquement. Le codage des ID crée des identifiants codés deux fois. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../api/dcs-intro/dcs-s2s/dcs-s2s-calls.md"> Lancement d’appels d’API DCS serveur à serveur</a> </p> </td> 
-   <td colname="col2" morerows="1"> <p>Texte révisé pour inclure la variable <code> d_mid</code>. </p> </td> 
+   <td colname="col2" morerows="1"> <p>Modification du texte pour inclure la variable <code> d_mid</code>. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../api/dcs-intro/dcs-api-reference/dcs-keys.md"> Attributs pris en charge pour les appels de l’API DCS</a> </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../integration/media-data-integration/impression-data-pixels.md"> Capture des données d’impression de campagne via des appels de pixel </a> </p> </td> 
-   <td colname="col2"> <p>Nouvelles entrées de clé et de macro Ajoutées pour <code> d_mid</code> et <code> d_region</code>. </p> </td> 
+   <td colname="col2"> <p>Ajout de nouvelles entrées de clé et de macro pour <code> d_mid</code> et <code> d_region</code>. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../reporting/audience-optimization-reports/metadata-files-intro/datafiles-intro.md"> Fichiers de données pour les rapports d’Audience Optimization</a> </p> </td> 
-   <td colname="col2"> <p>Nouvelle description Ajoutée pour <span class="wintitle"> Type d'événement</span>. </p> </td> 
+   <td colname="col2"> <p>Ajout d’une nouvelle description pour <span class="wintitle"> Event Type</span>. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../features/audience-marketplace/marketplace-data-providers/marketplace-billing-report.md">Présentation du rapport de facturation des fournisseurs de données</a> (en anglais) </p> </td> 
-   <td colname="col2"> <p>Nouvelle documentation qui liste et définit les éléments dans un rapport de facturation <span class="wintitle"> Audience Marketplace</span>. </p> </td> 
+   <td colname="col2"> <p>Nouvelle documentation qui répertorie et définit les éléments dans un rapport de facturation <span class="wintitle"> Audience Marketplace</span>. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../features/segments/segment-builder-data.md">Données sur la taille de segment et les caractéristiques dans le créateur de segments</a> (en anglais) </p> </td> 
@@ -443,8 +442,7 @@ Liste de documentation sur les Audiences Manager nouvelles et révisées publié
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../features/audience-marketplace/marketplace-data-buyers/marketplace-manage-subscriptions.md#marketplace-buyer-details">Présentation de la page des détails de la formule d’Audience Marketplace</a> (en anglais) </p> </td> 
-   <td colname="col2"> <p>Nouvelle documentation qui décrit les informations du plan affichées dans la page des détails de l'abonnement d'un acheteur. </p> </td> 
+   <td colname="col2"> <p>Nouvelle documentation qui décrit les informations de plan affichées dans la page des détails d’abonnement d’un acheteur. </p> </td> 
   </tr> 
  </tbody> 
 </table>
-
