Updating Old File for core commit

--- a/help/using/docs-updates/docs-2016.md
+++ b/help/using/docs-updates/docs-2016.md
@@ -10,7 +10,7 @@ exl-id: f344dfdb-75c5-4931-81ca-f6de25e26929
 source-git-commit: 4d3c859cc4dc5294286680b0e63c287e0409f7fd
 workflow-type: tm+mt
 source-wordcount: '1415'
-ht-degree: 26%
+ht-degree: 27%
 
 ---
 
@@ -18,7 +18,7 @@ ht-degree: 26%
 
 Liste de la documentation sur les Audiences Manager nouvelles et révisées publiée en 2016. Inclut des mises à jour mineures ou des modifications au guide d’Audience Manager qui peuvent ne pas être incluses dans les notes de mise à jour de l’Experience Cloud.
 
-## Décembre 2016 {#dec-16}
+## Décembre 2016 {#dec-16}
 
 <table id="table_D16570793032445FBC18F662BF9DDA7A"> 
  <thead> 
@@ -59,7 +59,7 @@ Liste de la documentation sur les Audiences Manager nouvelles et révisées publ
  </tbody> 
 </table>
 
-## Novembre 2016 {#nov-16}
+## Novembre 2016 {#nov-16}
 
 <table id="table_D83514BA7F5745DA80D6135804D5BD5F"> 
  <thead> 
@@ -100,7 +100,7 @@ Liste de la documentation sur les Audiences Manager nouvelles et révisées publ
  </tbody> 
 </table>
 
-## Octobre 2016 {#oct-16}
+##  octobre 2016 {#oct-16}
 
 <table id="table_B19586DBA5D44F8E9D06610DB704EFB9"> 
  <thead> 
@@ -145,7 +145,7 @@ Liste de la documentation sur les Audiences Manager nouvelles et révisées publ
  </tbody> 
 </table>
 
-## Septembre 2016 {#sept-16}
+##  septembre 2016 {#sept-16}
 
 <table id="table_9B18916DD43E4DB38C0C340DE4E3DF62"> 
  <thead> 
@@ -186,7 +186,7 @@ Liste de la documentation sur les Audiences Manager nouvelles et révisées publ
  </tbody> 
 </table>
 
-## Août 2016 {#aug-16}
+## août 2016 {#aug-16}
 
 <table id="table_50CD90671E4B4C50A624AC0948FA8324"> 
  <thead> 
@@ -231,7 +231,7 @@ Liste de la documentation sur les Audiences Manager nouvelles et révisées publ
  </tbody> 
 </table>
 
-## Juillet 2016 {#july-16}
+##  juillet 2016 {#july-16}
 
 <table id="table_183F245818BC4CF5AAB9B610C1BE4A9F"> 
  <thead> 
@@ -272,7 +272,7 @@ Liste de la documentation sur les Audiences Manager nouvelles et révisées publ
  </tbody> 
 </table>
 
-## Juin 2016 {#june-16}
+##  juin 2016 {#june-16}
 
 <table id="table_E71252DF328F42A3AB0BD2CA7DC5A549"> 
  <thead> 
@@ -301,7 +301,7 @@ Liste de la documentation sur les Audiences Manager nouvelles et révisées publ
  </tbody> 
 </table>
 
-## Avril 2016 {#apr-16}
+## Avril 2016 {#apr-16}
 
 <table id="table_106BAD4680F1446B813A907F9E3ADCB8"> 
  <thead> 
@@ -338,7 +338,7 @@ Liste de la documentation sur les Audiences Manager nouvelles et révisées publ
  </tbody> 
 </table>
 
-## Mars 2016 {#march-16}
+## Mars 2016 {#march-16}
 
 <table id="table_D4EE56B5AE23497F98025E1D13CBB3A1"> 
  <thead> 
@@ -391,7 +391,7 @@ Liste de la documentation sur les Audiences Manager nouvelles et révisées publ
  </tbody> 
 </table>
 
-## Janvier 2016 {#jan-16}
+## Janvier 2016 {#jan-16}
 
 <table id="table_AC8FF0DB45B546C69D89749FF0FA1CCD"> 
  <thead> 
