Updating Old File for core commit 2ea96d5e9b44b5b9905911b3e861650c3b2b5b5d

--- a/help/using/docs-updates/docs-2016.md
+++ b/help/using/docs-updates/docs-2016.md
@@ -7,10 +7,10 @@ title: Mises à jour de la documentation 2016
 uuid: 940846e2-25aa-4136-8342-6341707f5197
 feature: Présentation
 exl-id: f344dfdb-75c5-4931-81ca-f6de25e26929
-source-git-commit: 4d3c859cc4dc5294286680b0e63c287e0409f7fd
+source-git-commit: 319be4dade263c5274624f07616b404decb7066f
 workflow-type: tm+mt
-source-wordcount: '1415'
-ht-degree: 27%
+source-wordcount: '1411'
+ht-degree: 26%
 
 ---
 
@@ -160,7 +160,7 @@ Liste de la documentation sur les Audiences Manager nouvelles et révisées publ
    <td colname="col2"> Modification de la valeur TTL (time-to-live) du cookie demdex et du cookie partenaire à 180 jours pour se conformer aux réglementations CNIL françaises. </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <a href="https://docs.adobe.com/content/help/fr-FR/core-services/interface/ec-cookies/cookies-am.html" format="https" scope="external"> Cookies utilisés dans l’Experience Cloud</a> </td> 
+   <td colname="col1"> <a href="https://experienceleague.adobe.com/docs/core-services/interface/ec-cookies/cookies-am.html" format="https" scope="external"> Cookies utilisés dans l’Experience Cloud</a> </td> 
    <td colname="col2"> Modification de la valeur TTL (time-to-live) du cookie demdex et du cookie partenaire à 180 jours pour se conformer aux réglementations CNIL françaises. </td> 
   </tr> 
   <tr> 
@@ -328,7 +328,7 @@ Liste de la documentation sur les Audiences Manager nouvelles et révisées publ
    <td colname="col2"> <p>La nouvelle documentation définit les mesures des rapports et les graphiques pour la fusion de profils. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p> <a href="https://docs.adobe.com/content/help/en/audience-manager/user-guide/implementation-integration-guides/integration-experience-platform/aam-aep-audience-sharing.html" format="https" scope="external"> Audience Manager de segments dans Analytics</a> </p> </td> 
+   <td colname="col1"> <p> <a href="https://experienceleague.adobe.com/docs/audience-manager/user-guide/implementation-integration-guides/integration-experience-platform/aam-aep-audience-sharing.html" format="https" scope="external"> Audience Manager de segments dans Analytics</a> </p> </td> 
    <td colname="col2"> <p>Partagez des segments d’Audience Manager avec Analytics en temps réel. </p> </td> 
   </tr> 
   <tr> 
