Updating Old File for core commit 2ea96d5e9b44b5b9905911b3e861650c3b2b5b5d

--- a/help/using/docs-updates/docs-2021.md
+++ b/help/using/docs-updates/docs-2021.md
@@ -6,10 +6,10 @@ solution: Audience Manager
 title: Mises à jour de la documentation 2021
 feature: Présentation
 exl-id: c5b2be85-d805-453a-a5b4-4d32730bd0bc
-source-git-commit: ff493329299c328294fd0f79f5e12a4293d745ad
+source-git-commit: 319be4dade263c5274624f07616b404decb7066f
 workflow-type: tm+mt
-source-wordcount: '215'
-ht-degree: 57%
+source-wordcount: '213'
+ht-degree: 54%
 
 ---
 
@@ -17,7 +17,7 @@ ht-degree: 57%
 
 Une liste de la documentation nouvelle ou révisée publiée en 2021. Inclut des mises à jour mineures de la documentation d’Audience Manager qui pourraient ne pas figurer dans les notes de mise à jour d’Experience Cloud.
 
-Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.com/content/help/fr-FR/release-notes/experience-cloud/current.html) pour prendre connaissance des modifications apportées à [!DNL Audience Manager] et aux autres solutions d’[!DNL Experience Cloud]. Pour consulter les anciennes notes de mise à jour, reportez-vous à la section [Années précédentes](../docs-updates/docs-2020.md).
+Consultez les [Notes de mise à jour d’Experience Cloud](https://experienceleague.adobe.com/docs/release-notes/experience-cloud/current.html) pour prendre connaissance des modifications apportées à [!DNL Audience Manager] et aux autres solutions d’[!DNL Experience Cloud]. Pour consulter les anciennes notes de mise à jour, reportez-vous à la section [Années précédentes](../docs-updates/docs-2020.md).
 
 ## Mai 2021 {#aam-may-updates}
 
