Updating Old File for core commit 2ea96d5e9b44b5b9905911b3e861650c3b2b5b5d

--- a/help/using/docs-updates/docs-2018.md
+++ b/help/using/docs-updates/docs-2018.md
@@ -7,10 +7,10 @@ title: Mises à jour de la documentation 2018
 uuid: 75592371-8e97-440a-9cdc-417498d13d6c
 feature: Présentation
 exl-id: a6d166e9-cad3-4201-a6dd-3d288366938c
-source-git-commit: 4d3c859cc4dc5294286680b0e63c287e0409f7fd
+source-git-commit: 319be4dade263c5274624f07616b404decb7066f
 workflow-type: tm+mt
-source-wordcount: '1068'
-ht-degree: 48%
+source-wordcount: '1062'
+ht-degree: 47%
 
 ---
 
@@ -18,7 +18,7 @@ ht-degree: 48%
 
 Liste de la documentation nouvelle ou révisée publiée en 2018 et les années précédentes. Inclut des mises à jour mineures de la documentation d’Audience Manager qui pourraient ne pas figurer dans les notes de mise à jour d’Experience Cloud.
 
-Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.com/content/help/fr-FR/release-notes/experience-cloud/current.html) pour prendre connaissance des modifications apportées à [!DNL Audience Manager] et aux autres solutions d’[!DNL Experience Cloud]. Pour consulter les anciennes notes de mise à jour, reportez-vous à la section [Années précédentes](../docs-updates/docs-2018.md).
+Consultez les [Notes de mise à jour d’Experience Cloud](https://experienceleague.adobe.com/docs/release-notes/experience-cloud/current.html) pour prendre connaissance des modifications apportées à [!DNL Audience Manager] et aux autres solutions d’[!DNL Experience Cloud]. Pour consulter les anciennes notes de mise à jour, reportez-vous à la section [Années précédentes](../docs-updates/docs-2018.md).
 
 ## Octobre 2018 {#oct-2018}
 
@@ -65,7 +65,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
  <tbody> 
   <tr> 
    <td colname="col1"> <p><a href="../features/manage-datasources.md#delete-data-source"> Suppression d’une source de données</a> </p> </td> 
-   <td colname="col2"> <p>Pour les clients qui utilisent Audience Manager et Adobe Analytics : L’interface utilisateur de l’Audience Manager ne vous permet pas de supprimer les sources de données créées automatiquement de vos suites de rapports Analytics. Utilisez le <a href="https://docs.adobe.com/content/help/en/core-services/interface/about-core-services/core-services-landing.html" format="https" scope="external"> Core Service</a> pour annuler le mappage de ces sources de données. </p> </td> 
+   <td colname="col2"> <p>Pour les clients qui utilisent Audience Manager et Adobe Analytics : L’interface utilisateur de l’Audience Manager ne vous permet pas de supprimer les sources de données créées automatiquement de vos suites de rapports Analytics. Utilisez le <a href="https://experienceleague.adobe.com/docs/core-services/interface/about-core-services/core-services-landing.html" format="https" scope="external"> Core Service</a> pour annuler le mappage de ces sources de données. </p> </td> 
   </tr> 
  </tbody> 
 </table>
@@ -82,7 +82,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
  <tbody> 
   <tr> 
    <td colname="col1"> <p><a href="../dil/dil-overview.md">API Data Integration Library (DIL) </a> </p> </td> 
-   <td colname="col2"> <p>À partir de la version 8.0, <span class="wintitle"> DIL</span> dépend fortement de <a href="https://docs.adobe.com/content/help/fr-FR/id-service/using/home.html" format="https" scope="external"><span class="keyword"> Adobe Experience Platform Identity Service</span></a>, version 3.3 ou supérieure. </p> </td> 
+   <td colname="col2"> <p>À partir de la version 8.0, <span class="wintitle"> DIL</span> dépend fortement de <a href="https://experienceleague.adobe.com/docs/id-service/using/home.html" format="https" scope="external"><span class="keyword"> Adobe Experience Platform Identity Service</span></a>, version 3.3 ou supérieure. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../dil/dil-overview.md"> Présentation de Data Integration Library (DIL)</a> </p> </td> 
