--- a/help/using/docs-updates/docs-2020.md
+++ b/help/using/docs-updates/docs-2020.md
@@ -6,9 +6,9 @@ solution: Audience Manager
 title: Mises à jour de la documentation 2020
 feature: Présentation
 exl-id: 38af1e31-f0dd-4956-b456-ef2002f77707
-source-git-commit: 2db0c05df8f029bef4996a7f43445b7727ecd55c
+source-git-commit: 319be4dade263c5274624f07616b404decb7066f
 workflow-type: tm+mt
-source-wordcount: '1098'
+source-wordcount: '1096'
 ht-degree: 60%
 
 ---
@@ -17,7 +17,7 @@ ht-degree: 60%
 
 Une liste de la documentation nouvelle ou révisée publiée en 2020. Inclut des mises à jour mineures de la documentation d’Audience Manager qui pourraient ne pas figurer dans les notes de mise à jour d’Experience Cloud.
 
-Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.com/content/help/fr-FR/release-notes/experience-cloud/current.html) pour prendre connaissance des modifications apportées à [!DNL Audience Manager] et aux autres solutions d’[!DNL Experience Cloud]. Pour consulter les anciennes notes de mise à jour, reportez-vous à la section [Années précédentes](../docs-updates/docs-2019.md).
+Consultez les [Notes de mise à jour d’Experience Cloud](https://experienceleague.adobe.com/docs/release-notes/experience-cloud/current.html) pour prendre connaissance des modifications apportées à [!DNL Audience Manager] et aux autres solutions d’[!DNL Experience Cloud]. Pour consulter les anciennes notes de mise à jour, reportez-vous à la section [Années précédentes](../docs-updates/docs-2019.md).
 
 
 ## Octobre 2020 {#aam-october-updates}
