Updating Old File for core commit 80192c0e5620eac43662d50497d5c14f5beea8d3

--- a/help/using/docs-updates/docs-2019.md
+++ b/help/using/docs-updates/docs-2019.md
@@ -1,15 +1,15 @@
 ---
 description: Liste de la documentation nouvelle ou révisée publiée en 2019 et les années précédentes. Inclut des mises à jour mineures de la documentation d’Audience Manager qui pourraient ne pas figurer dans les notes de mise à jour d’Experience Cloud.
-seo-description: Liste de la documentation nouvelle ou révisée publiée en 2019 et les années précédentes. Inclut des mises à jour mineures de la documentation d’Audience Manager qui pourraient ne pas figurer dans les notes de mise à jour d’Experience Cloud.
-seo-title: Mises à jour de la documentation 2019
+seo-description: A list of new or revised documentation released in 2019 and previous years. Includes minor updates to the Audience Manager documentation that might not be covered in the Experience Cloud release notes.
+seo-title: 2019 Documentation Updates
 solution: Audience Manager
 title: Mises à jour de la documentation 2019
 uuid: 75592371-8e97-440a-9cdc-417498d13d6c
-feature: Présentation
+feature: Overview
 exl-id: 3cc664e4-67e8-48b8-980a-db3f3fe327f6
-source-git-commit: 319be4dade263c5274624f07616b404decb7066f
+source-git-commit: 670d2f1990d7370ab8930776df9ae5af71dd3d9e
 workflow-type: tm+mt
-source-wordcount: '1396'
+source-wordcount: '1362'
 ht-degree: 47%
 
 ---
